<resources>
    <string name="app_name">Buzzer</string>
    <string name="player_login_header">Welcome to Jeopardy! What\'s your name?</string>
    <string name="jeopardy">Jeopardy!</string>
    <string name="connect">Connect</string>
    <string name="name">Name</string>
    <string name="host">Host</string>
    <string name="wrong">Wrong</string>
    <string name="right">Right</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="buzzers">Buzzers</string>
    <string name="player">Player</string>
    <string name="not_buzzed_in">You are not buzzed in</string>
    <string name="buzz">Buzz</string>
    <string name="buzzed_in">You are buzzed in!</string>
    <string name="connecting">Connecting...</string>
    <string name="settings">Settings</string>
    <string name="host_mode">Host mode</string>
</resources>
