<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <TextView
        style="@style/TextAppearance.Buzzer.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buzzers"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp" />

    <Switch
        android:id="@+id/buzzer_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="false"
        android:textOff="@string/closed"
        android:textOn="@string/open"
        android:switchTextAppearance="@style/TextAppearance.Buzzer.Body" />

</LinearLayout>