<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/container">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                style="@style/Widget.Buzzer.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                app:contentInsetStart="0dp"
                app:title="@string/app_name" />
        </com.google.android.material.appbar.AppBarLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/settings_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Buzzer.Header"
            android:paddingRight="64dp"
            android:paddingLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="64dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.Buzzer.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/host_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:switchTextAppearance="@style/TextAppearance.Buzzer.Body"/>
        </LinearLayout>


    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
